--- a/main.html
+++ b/main.html
@@ -7,6 +7,14 @@
 </head>
 
 <body>
+	<div class="container">
+		<div class="block a1">3</div>
+		<div class="block a1">3</div>
+		<div class="block a1">3</div>
+		<div class="block a1">3</div>
+		<div class="block a2">1</div>
+		<div class="block a3">2</div>
+	</div>
 	<!-- the entire body must be written by student -->
     <script type="text/javascript" src="./script.js">
 </script>
