--- a/main.html
+++ b/main.html
@@ -7,7 +7,7 @@
 </head>
 
 <body>
-	<div class="container">
+	<div class="holder">
 		<div class="block a1">3</div>
 		<div class="block a1">3</div>
 		<div class="block a1">3</div>
